Fail better when is<>() / downcast<>() is used for an unsupported type https://bugs.webkit.org/show_bug.cgi?id=137323

Reviewed by Benjamin Poulain.

We should fail better when is<>() / downcast<>() is used for an
unsupported type (i.e. a type that doesn't have the needed
TypeCastTraits template specialization). Previously, we would get an
obscure linking error, which was sub-optimal.

With this patch, you would now hit a static_assert() at build time if
you tried to use is<>() / downcast<>() for a type that did not have the
needed template specialization. There is also a helpful comment above
the assertion letting the developer know how to add the needed template
specialization.

* wtf/TypeCasts.h:
(WTF::TypeCastTraits::isOfType):


Canonical link: https://commits.webkit.org/155121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174193 268f45cc-cd09-0410-ab3c-d52691b4dbfc